Fix landing page height on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -312,12 +312,8 @@ svg {
   height: 100%;
   width: 100%;
   position: relative;
-  transform: translateY(-30px);
-  -webkit-transform: translateY(-30px);
-  -moz-transform: translateY(-30px);
-  -o-transform: translateY(-30px);
-  -ms-transform: translateY(-30px);
 }
+
 #scroll-down a span {
   position: absolute;
   top: 0;
